--- a/msg/index.html
+++ b/msg/index.html
@@ -4,7 +4,7 @@
 	<title>message</title>
 </head>
 <body>
-	<img src="WhatsApp Image 2020-06-12 at 07.34.27.jpg" width="1000" alt="500">
+	<img src="img.jpg" width="1000" alt="500">
 	<h1>I LOVE YOU MADAM</h1>
 	<h1>I'm sleeping for 6 hrs tom evng </h1>
 
